change style when in mobile

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
       <main class="px-3">
         <img src="./assets/images/profile.png" class="rounded-circle img-thumbnail mx-auto d-block my-proflie-picture" alt="my-picture" />
-        <h3 class="mt-4">Muhammad Raihan Majid</h3>
-        <p class="lead">Hi, my name is Raihan, you can see my full name above :D, and you can call me Han</p>
+        <h3 class="mt-4 my-profile-name">Muhammad Raihan Majid</h3>
+        <p class="lead my-profile-desc">Hi, my name is Raihan, you can see my full name above :D, and you can call me Han</p>
         <div class="lead">
           <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
         </div>
