--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -46,12 +46,41 @@
         <h3 class="mt-4 my-profile-name">Muhammad Raihan Majid</h3>
         <p class="lead my-profile-desc">Hi, my name is Raihan, you can see my full name above :D, and you can call me Han</p>
         <div class="lead">
-          <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+          <div class="row mt-3">
+            <div class="col-lg-12">
+              <h6 class="mb-3">My Personal Website</h6>
+              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-lg-12">
+              <h6 class="mb-3">My Personal Website</h6>
+              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-lg-12">
+              <h6 class="mb-3">My Personal Website</h6>
+              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-lg-12">
+              <h6 class="mb-3">My Personal Website</h6>
+              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-lg-12">
+              <h6 class="mb-3">My Personal Website</h6>
+              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
+            </div>
+          </div>
         </div>
       </main>
 
-      <footer class="mt-auto text-white-50">
-        <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+      <footer class="mt-5 text-white-50">
+        <p><i>Muhammad Raihan Majid &copy; 2021</i></p>
       </footer>
     </div>
 
