--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -7,6 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
     <!-- My CSS -->
     <link rel="stylesheet" href="./assets/style.css" />
@@ -33,15 +36,7 @@
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <header class="mb-10">
-        <nav class="nav nav-masthead justify-content-center float-md-center">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Get in touch</a>
-        </nav>
-      </header>
-
-      <main class="px-3">
+      <main class="px-3 mt-4">
         <img src="./assets/images/profile.png" class="rounded-circle img-thumbnail mx-auto d-block my-proflie-picture" alt="my-picture" />
         <h3 class="mt-4 my-profile-name">Muhammad Raihan Majid</h3>
         <p class="lead my-profile-desc">Hi, my name is Raihan, you can see my full name above :D, and you can call me Han</p>
@@ -55,31 +50,22 @@
           <div class="row mt-3">
             <div class="col-lg-12">
               <h6 class="mb-3">My Personal Website</h6>
-              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-lg-12">
-              <h6 class="mb-3">My Personal Website</h6>
-              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-lg-12">
-              <h6 class="mb-3">My Personal Website</h6>
-              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-lg-12">
-              <h6 class="mb-3">My Personal Website</h6>
-              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
+              <div class="d-flex justify-content-evenly">
+                <div class="row">
+                  <div class="col-6">
+                    <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+                  </div>
+                  <div class="col-6">
+                    <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </main>
 
-      <footer class="mt-5 text-white-50">
+      <footer class="mt-auto text-white-50">
         <p><i>Muhammad Raihan Majid &copy; 2021</i></p>
       </footer>
     </div>
