Finish with the view, remain the link to my personal website

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
           <div class="row mt-3">
             <div class="col-lg-12">
               <h6 class="mb-3">My Personal Website</h6>
-              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Learn more</a>
+              <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white col-12 col-md-6 col-lg-8">Let's see</a>
             </div>
           </div>
           <div class="row mt-3">
             <div class="col-lg-12">
-              <h6 class="mb-3">My Personal Website</h6>
+              <h6 class="mb-3">Get in touch</h6>
               <div class="d-flex justify-content-evenly">
                 <div class="row">
                   <div class="col-6">
-                    <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+                    <a href="https://www.instagram.com/._raihanm/" target="blank" class="btn btn-lg btn-secondary border-white bg-white"><i class="fab fa-instagram fw-light fs-3"></i></a>
                   </div>
                   <div class="col-6">
-                    <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+                    <a href="https://wa.me/6285964263539" target="blank" class="btn btn-lg btn-secondary border-white bg-white"><i class="fab fa-whatsapp fw-light fs-3"></i></a>
                   </div>
                 </div>
               </div>
